--- a/css/main.css
+++ b/css/main.css
@@ -303,7 +303,22 @@ ul li {
 /* ------------------------------------------------------------------------------
 	 Footer
 -------------------------------------------------------------------------------*/
-.footer {text-align: center;/* background-color: rgba(24, 24, 24, 0.27); */padding: 50px 0 50px 0;/* background: rgba(255, 255, 255, 0.17); */}
+.footer {
+text-align: center;
+/* background-color: rgba(24, 24, 24, 0.27); */
+padding: 50px 0 50px 0;
+
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: red;
+  color: white;
+  text-align: center;
+/* background: rgba(255, 255, 255, 0.17); */
+}
+
+
 
 
 .footer h5 {
