--- a/css/main.css
+++ b/css/main.css
@@ -304,9 +304,9 @@ ul li {
 	 Footer
 -------------------------------------------------------------------------------*/
 .footer {
-text-align: center;
+/* text-align: center; */
 /* background-color: rgba(24, 24, 24, 0.27); */
-padding: 50px 0 50px 0;
+/* padding: 50px 0 50px 0; */
 
   position: fixed;
   left: 0;
