--- a/css/main.css
+++ b/css/main.css
@@ -312,7 +312,7 @@ ul li {
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: red;
+  background-color: transparent;
   color: white;
   text-align: center;
 /* background: rgba(255, 255, 255, 0.17); */
